--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ sitemap:
 
 <div class="index">
     <div class="index__bumper">
-        Somos un laboratorio de óptica aplicada y procesamiento de imágenes enfocados en metrología óptica, imagenología médica, reconstrucción 3D, microscopía y procesamiendo digital de imágenes. 
-        <!-- We are an applied optics and image processing lab focused on optical metrology, biomedical imaging, 3D-reconstruction and digital image processing. -->
+        <!-- Somos un laboratorio de óptica aplicada y procesamiento de imágenes enfocados en metrología óptica, imagenología médica, reconstrucción 3D, microscopía y procesamiendo digital de imágenes.  -->
+        We are an applied optics and image processing lab focused on optical metrology, biomedical imaging, 3D-reconstruction and digital image processing.
     </div>
     <div class="index__bumper" style="float: right;">
         <div class="cycle-slideshow" data-cycle-speed="200" ata-cycle-fx="fadeout">
