--- a/publications/index.html
+++ b/publications/index.html
@@ -1,7 +1,7 @@
 ---
 layout: publication
-title: Publicaciones
-subtitle: Publicaciones recientes
+title: Publications
+subtitle: Recent Publications
 permalink: /publications/
 categories: 
  - publications
@@ -25,18 +25,18 @@ categories:
     
                 {% assign m = entry.date | date: "%-m" %}
                 {% case m %}
-                  {% when '1' %}Enero
-                  {% when '2' %}Febrero
-                  {% when '3' %}Marzo
-                  {% when '4' %}Abril
-                  {% when '5' %}Mayo
-                  {% when '6' %}Junio
-                  {% when '7' %}Julio
-                  {% when '8' %}Agosto
-                  {% when '9' %}Septiembre
-                  {% when '10' %}Octubre
-                  {% when '11' %}Noviembre
-                  {% when '12' %}Diciembre
+                  {% when '1' %}January
+                  {% when '2' %}February
+                  {% when '3' %}March
+                  {% when '4' %}April
+                  {% when '5' %}May
+                  {% when '6' %}June
+                  {% when '7' %}July
+                  {% when '8' %}August
+                  {% when '9' %}September
+                  {% when '10' %}October
+                  {% when '11' %}November
+                  {% when '12' %}December
                 {% endcase %}
                 
                     <td class="publication">
